--- a/resources/assets/sass/coreui/core/_navbar.scss
+++ b/resources/assets/sass/coreui/core/_navbar.scss
@@ -13,7 +13,7 @@
 
     background-color: $navbar-brand-bg;
     background-image: $navbar-brand-logo;
-    background-position: center center;
+    background-position: center 11px;
     background-repeat: no-repeat;
     background-size: $navbar-brand-logo-size;
     display: inline-block;
