--- a/resources/assets/sass/coreui/custom-typography.scss
+++ b/resources/assets/sass/coreui/custom-typography.scss
@@ -49,3 +49,16 @@ h2 {
   display: block;
   color: black;
 }
+
+.color-twitter {
+  color: #00aced !important;
+}
+.color-facebook {
+  color: #3b5998 !important;
+}
+.color-vk {
+  color: #416cb1 !important;
+}
+.color-youtube {
+
+}
