--- a/resources/assets/sass/custom/components/login.scss
+++ b/resources/assets/sass/custom/components/login.scss
@@ -92,6 +92,14 @@
 .groupRoles {
   label {
     border-radius: 0;
+    &:not(.active) {
+      background-color: $secondary;
+      border-color: $secondary;
+    }
+    &.active {
+      background-color: $main-color-custom !important;
+      border-color: $main-color-custom !important;
+    }
 
     &:first-child {
       border-top-left-radius: 4px;
