--- a/resources/assets/sass/coreui/custom-table.scss
+++ b/resources/assets/sass/coreui/custom-table.scss
@@ -138,6 +138,14 @@ table.table td, table th, table tr{
    }
  }
 
+ .spanKeyTable {
+   color: #516378;
+ }
+
+ .spanBorderBottomTable {
+   border-bottom: 1px solid #caccce;
+ }
+
  .groupLinksCampaigns {
    input, button {
      margin: auto 10px;
