--- a/resources/assets/sass/coreui/custom-dashboards.scss
+++ b/resources/assets/sass/coreui/custom-dashboards.scss
@@ -8,4 +8,65 @@
     margin-bottom: 0;
     margin: 15px auto;
   }
+
+  .list-campaigns-dashboard {
+    strong {
+      display: inline-block
+    }
+
+    .desc {
+      margin-left: 0
+    }
+
+    .value {
+      right: 0;
+    }
+  }
+
+  .gift {
+    text-align: center;
+    margin: 0 auto;
+  }
+
+  .list_custom_scope {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    padding-left: 0;
+    margin-bottom: 0;
+
+    li {
+      list-style: none;
+      text-align: center;
+      padding: 0 10px;
+    }
+  }
+
+
+  .card-gift-dashboard {
+    width: 200px;
+    padding: 15px;
+    text-align: center;
+    margin: 0 auto;
+
+    img {
+      max-width: 100%;
+      display: block;
+      margin: 0 auto 15px auto;
+    }
+  }
+}
+
+
+@media screen and (max-width: 991px) {
+  #dashboard {
+
+    .list_custom_scope {
+      flex-direction: column;
+
+      .text-muted {
+        display: inline-block;
+      }
+    }
+  }
 }
