--- a/resources/assets/sass/coreui/custom-table.scss
+++ b/resources/assets/sass/coreui/custom-table.scss
@@ -254,7 +254,7 @@ table.table td, table th, table tr{
       left: 15px;
       margin-top: 20px;
     }
-    .change-gift, .delete-gift {
+    .change-gift, .delete-gift, .change-campaign {
       display: none;
     }
     .inStock_gift {
