Previews for Campaign & Gift (create\update methods)
deleted cached git folders for public js & css

composer deleted map for model User

--- a/resources/assets/sass/coreui/custom-typography.scss
+++ b/resources/assets/sass/coreui/custom-typography.scss
@@ -62,3 +62,12 @@ h2 {
 .color-youtube {
 
 }
+
+.swal2-popup .swal2-title {
+  font-size: 24px !important;
+}
+
+.swal2-popup #swal2-content {
+  font-size: 18px;
+  font-weight: bold;
+}
