--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21262,6 +21262,15 @@ h2 {
   color: #416cb1 !important;
 }
 
+.swal2-popup .swal2-title {
+  font-size: 24px !important;
+}
+
+.swal2-popup #swal2-content {
+  font-size: 18px;
+  font-weight: bold;
+}
+
 table.table tr td,
 table.table tr th {
   padding: 0.6rem;
@@ -22600,6 +22609,31 @@ li {
 
 .block_logo_user img {
   max-width: 100%;
+}
+
+#renderedImageBlock {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  height: 250px;
+  max-width: 100%;
+  border-radius: 20px;
+  background: rgba(128, 128, 128, 0.15);
+  border: 2px solid rgba(255, 255, 255, 0.7);
+}
+
+#renderedImageBlock img {
+  width: auto;
+  display: block;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .vue-notification.warning {
