--- a/resources/assets/sass/coreui/_custom.scss
+++ b/resources/assets/sass/coreui/_custom.scss
@@ -296,3 +296,21 @@ a, h6, h5, h4, h3, h2, h1, span, p, pre, li {
 .block_logo_user img {
   max-width: 100%;
 }
+
+#renderedImageBlock {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  height: 250px;
+  max-width: 100%;
+  border-radius: 20px;
+  background: rgba(128, 128, 128, 0.15);
+  border: 2px solid rgba(255, 255, 255, 0.70);
+}
+#renderedImageBlock img {
+  width: auto;
+  display: block;
+  max-width: 100%;
+  max-height: 100%;
+}
