--- a/resources/assets/sass/coreui/_custom.scss
+++ b/resources/assets/sass/coreui/_custom.scss
@@ -14,6 +14,7 @@
 @import "modal-payment";
 @import "custom-chart";
 @import "custom-dashboards";
+@import "custom-steps";
 
 body {
   background: $color-bg-body;
