--- a/resources/assets/sass/coreui/_custom.scss
+++ b/resources/assets/sass/coreui/_custom.scss
@@ -315,3 +315,11 @@ a, h6, h5, h4, h3, h2, h1, span, p, pre, li {
   max-width: 100%;
   max-height: 100%;
 }
+
+@media screen and (max-width: 760px) {
+  .btn {
+    float: none;
+    display: block;
+    margin: 5px auto;
+  }
+}
