1) Rendered catalog gifts (Influencer) 2) Ordering gifts (in progress) 3) Changed all <loading> with modal bg 4) Changes in migrations, added array to enums, etc.

--- a/resources/assets/sass/coreui/custom-table.scss
+++ b/resources/assets/sass/coreui/custom-table.scss
@@ -127,6 +127,11 @@ table.table td, table th, table tr{
      float: left;
      display: inline-block;
      position: relative;
+
+     img {
+       max-width: 100%;
+       max-height: 100%;
+     }
    }
 
    .icons_influencer {
@@ -381,6 +386,11 @@ table.table td, table th, table tr{
 
 .table_offers #table_cards {
 
+  .points_gift {
+    position: static;
+    margin: 10px auto;
+    width: 100%;
+  }
   .table_campaign_name {
     font-size: 20px;
     margin-bottom: 10px;
