Fix with rendering Invites (dependency on id influencer) Performer - "Send Offer"
Fix with rendering Channel data during Influencer registration

some styles for "table Cards"

( INFLUENCER => STILL IN TESTING! )

--- a/resources/assets/sass/coreui/custom-table.scss
+++ b/resources/assets/sass/coreui/custom-table.scss
@@ -170,6 +170,12 @@ table.table td, table th, table tr{
    }
  }
 
+ .influencers {
+   .photo_influencer_table {
+     max-width: initial !important;
+   }
+ }
+
 .fa.fa-star {
   margin: 0 3px;
   color: #D8D8D8;
