Performer->Ordered Gifts render & change status by gift code + some styles

--- a/resources/assets/sass/coreui/custom-table.scss
+++ b/resources/assets/sass/coreui/custom-table.scss
@@ -129,7 +129,7 @@ table.table td, table th, table tr{
      position: relative;
 
      img {
-       max-width: 100%;
+       width: 48px;
        max-height: 100%;
      }
    }
